[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
sympy = "^1.10.1"
num2words = "^0.5.10"
oeis = "^2021.1.3"
eulerlib = "^0.2"
prime_algorithms = "^1.0"
lib = "^4.0.0"
ulam-spiral = "^1.2"
clever-chat = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"